# bc-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml
bc-server-api/: Cargo.toml
bc-server-api/src/: api.rs
modules/: mod.rs
modules/depo/: Cargo.toml
modules/depo/src/: depo.rs  lib.rs
modules/example/: Cargo.toml  README.md
modules/example/src/: lib.rs
modules/torgap/: Cargo.toml  README.md
modules/torgap/src/: torgap.rs
src/: logging.rs  main.rs  server.rs
