workspace = { members = ["modules/depo", "modules/example", "modules/torgap"] }
[package]
name = "bc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4.3"
async-trait = "0.1.74"
bytes = "1.5.0"
url = "2.4.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
nu-ansi-term = "0.49.0"

# Modules
depo-module = { path = "modules/depo", optional = true }
torgap = { path = "modules/torgap", optional = true }
example = { path = "modules/example", optional = true }

