[package]
name = "depo-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
depo = { path = "../../../bc-depo-rust-for-use-in-bc-server" }
# depo = { git = "https://github.com/BlockchainCommons/bc-depo-rust.git", branch = "for-bc-server" }
bc-server-api = { path = "../../bc-server-api" }

bytes = "1.5.0"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
log = "0.4.20"
