[package]
name = "torgap"
version = "0.1.0"
edition = "2021"

[dependencies]
bc-server-api = { path = "../../bc-server-api" }
torgap-sig-cli-rust = { git = "https://github.com/BlockchainCommons/torgap-sig-cli-rust"}
bytes = "1.5.0"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4.20"
nu-ansi-term = "0.49.0"
home = "0.5.9"
